#4: add autocomplete search by address

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dnv",
   "version": "0.1.0",
+  "homepage": "/dnv",
   "private": true,
   "dependencies": {
     "@react-google-maps/api": "2.1.0",
